--- a/index.html
+++ b/index.html
@@ -5,29 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Application</title>
     <link rel="stylesheet" href="/style.css">
+    <script type="module" src="/index.js"></script>
 </head>
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Enter City Name" spellcheck="false">
+            <input type="text" placeholder="Enter city name for Weather updates" spellcheck="false">
             <button><img src="images/search.png"></button>
+        </div>
+        <div class="error">
+            <p>Invalid city name</p>
         </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">22°c</h1>
-            <h2 class="city">New York</h2>
+            <h1 class="temp">23°c</h1>
+            <h2 class="city">City Name</h2>
+            <h3 class="feels">Feels like</h3>
+            <h3 class="feelTemp">23°c</h3>
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png">
                     <div>
-                        <p class="humidity">50%</p>
+                        <p class="humidity"></p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="images/Wind.png">
                     <div>
-                        <p class="wind">15 km/h</p>
+                        <p class="wind"> km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
